2004-11-26  Atsushi Enomoto  <atsushi@ximian.com>

	* Expression.cs : warning removal. Added Optimize() which is not
	  implemented at all.
	* Tokenizer.cs : warning elimination

2004-11-24  Atsushi Enomoto  <atsushi@ximian.com>

	* XPathEditableNavigator.cs, XPathChangeNavigator.cs,
	  IXPathEditable.cs : more removal of oldies.

2004-11-24  Atsushi Enomoto  <atsushi@ximian.com>

	* NodeChangedEventArgs.cs, NodeChangedEventHandler.cs : removed oldies.

2004-11-08  Atsushi Enomoto  <atsushi@ximian.com>

	* Tokenizer.cs : just use raw string instead of char[].
	* XPathNavigator.cs : reuse NameTable when creating XmlTextReader.

2004-11-07  Atsushi Enomoto  <atsushi@ximian.com>

	* Iterator.cs :
	  - Made copy constructor certainly different from other constructors.
	  - Position is never computed in each derived type. All MoveNext() are
	    now MoveNextCore().
	  - Most of the protected members could just be private.

2004-11-05  Atsushi Enomoto  <atsushi@ximian.com>

	* Expression.cs, XPathNavigator.cs : hold raw expression field for
	  get_Expression. It is preparation for expression optimization.

2004-11-05  Atsushi Enomoto  <atsushi@ximian.com>

	* Iterator.cs : SimpleIterator._current could be cloned only when
	  it is required.

2004-11-05  Atsushi Enomoto  <atsushi@ximian.com>

	* Iterator.cs : Some removal of Clone() were harmless.

2004-10-22  Atsushi Enomoto  <atsushi@ximian.com>

	* XPathDocument.cs : now all the new stuff that used to be in 2.0 are
	  reverted.
	* XPathEditableNavigator.cs : It will be removed. Right now modified
	  a bit to pass build.
	* XPathNavigator.cs : Added members that are merged from
	  XPathEditableNavigator. Updated members name.

2004-10-14  Atsushi Enomoto  <atsushi@ximian.com>

	* Iterator.cs :
	  - Added WrapperIterator to return BaseIterator in such case that 
	    variable reference is resolved to XPathNodeIterator. This fixes
	    bug #68267.
	  - Path ".." is reverse axis (actually no effect).